tdf#121282, tdf#121279, set text properties also on complex data labels

Change-Id: I2304b6050b786b6e4a9a8a968d7a4846d9da8be8
Reviewed-on: https://gerrit.libreoffice.org/64306
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 6a04b9298ae993881d20fc4b5aa91516d4df6695)